syntax = "proto3";

option csharp_namespace = "greeter_test";

package greet;

// The greeting service definition.
service Greeter {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloReply);
  rpc SimulateSqlOperationWithCancellation(SqlRequest) returns (SqlReply);
  rpc SimulateSqlOperationWithoutCancellation(SqlRequest) returns (SqlReply);
}

// The request message containing the user's name.
message HelloRequest {
  string name = 1;
}

// The response message containing the greetings.
message HelloReply {
  string message = 1;
}

message SqlRequest {
  string query = 1;
}

message SqlReply {
  string message = 1;
}
